# 3D-Mesh-Viewer

./: CMakeLists.txt  README.md  config.h  main.cpp
SFML-backend/: SFMLWindow.cpp  SFMLWindow.h
classes/: AmbientLight.cpp  AmbientLight.h  Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h  Grid.h  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Opengl.cpp  Opengl.h  PointLight.cpp  PointLight.h  SimpleGame.cpp  SimpleGame.h  Transform.cpp  Transform.h
interfaces/: IGame.h  IGameObject.h  IResource.h  IWindow.h
misc/: cmake_modules.txt  opengl_mockup.cpp  shader_mockup.glsl
